grammar.txt
program             -> statement* EOF;

statement           -> expressionStatement
                    | printStatement;
                    | letStatement;
                    | blockStatement;
                    | ifStatement;
                    WhileStatement;



printStatement      -> "print" expression ";";
letStatement        -> "let" ":" TYPE IDENTIFIER "=" expression ";";
expressionStatement -> expression ";";
blockStatement      -> "{" statement* "}";
ifStatement         -> "if" expression statement ("elif" expression statement)* ("else" statement)?;
whileStatement      -> "while" expression statement;


expression          -> equality | assignment;
assignment          -> IDENTIFIER "=" expression;
equality            -> comparison ( ( "!=" | "==" ) comparison )*;
comparison          -> term ( ( ">" | ">=" | "<" | "<=" ) term )*;
term                -> factor ( ( "-" | "+" ) factor )*;
factor              -> primary ( ( "/" | "*" ) primary )*;
primary             -> NUMBER | IDENTIFIER;

TYPE                -> i8 | i16 | i32 | i64 | u8 | u16 | u32 | u64 
